--- a/devopsIQ/index.html
+++ b/devopsIQ/index.html
@@ -1,5 +1,6 @@
 <html>
 <title>Jenkins New Website</title>
-<body background="images/2.jpg">
+<body background="images/1.jpg">
+<h1>WELCOME TO OUR FIRST WEBSITE </h1>
 </body>
 </html>
